--- a/rpe.css
+++ b/rpe.css
@@ -1,3 +1,49 @@
+html, body, p, h1 {
+	margin: 0;
+}
+
+header {
+	width: 100%;
+	height: 40px;
+	background-color: rgba(100, 100, 100, 1);
+	position: fixed;
+	z-index: 100;
+}
+
+.header-logo {
+	color: white;
+	line-height: 40px;
+	text-align: center;
+}
+
+.content {
+	padding-top: 40px;
+	margin: 0 5%;
+}
+
+.content-title {
+	font-size: 1.2em;
+	border-bottom: 1px dashed rgba(100, 100, 100, 1);
+	margin-bottom: 10px;
+}
+
+.inputarea {
+	padding-top: 20px;
+	margin-bottom: 20px;
+}
+
+.inputarea input {
+	border-radius: 5px;
+}
+
+.weight-input {
+	text-align: center;
+}
+
+.chart1 {
+	margin-bottom: 20px;
+}
+
 .table-scroll {
 	overflow-x: auto;
 	white-space: nowrap;
@@ -11,4 +57,21 @@ table {
 td {
   border: 1px solid black;
 	padding: 5px 10px;
+}
+
+#input {
+	font-size: 16px;
+}
+
+footer {
+	margin-top: 20px;
+	height: 60px;
+	border-top: 1px solid rgba(200, 200, 200, 0.6);
+}
+
+.copy-right {
+	font-size: 0.8em;
+	line-height: 60px;
+	text-align: center;
+	color: rgba(100, 100, 100, 1);
 }
