--- a/rpe.css
+++ b/rpe.css
@@ -14,6 +14,7 @@ header {
 	color: white;
 	line-height: 40px;
 	text-align: center;
+	font-family: serif;
 }
 
 .content {
@@ -25,6 +26,7 @@ header {
 	font-size: 1.2em;
 	border-bottom: 1px dashed rgba(100, 100, 100, 1);
 	margin-bottom: 10px;
+	font-family: sans-serif;
 }
 
 .inputarea {
@@ -57,6 +59,7 @@ table {
 td {
   border: 1px solid black;
 	padding: 5px 10px;
+	font-family: sans-serif;
 }
 
 #input {
@@ -74,4 +77,5 @@ footer {
 	line-height: 60px;
 	text-align: center;
 	color: rgba(100, 100, 100, 1);
+	font-family: serif;
 }
