--- a/rpe.css
+++ b/rpe.css
@@ -2,6 +2,10 @@ html, body, p, h1 {
 	margin: 0;
 }
 
+body {
+		font-family: sans-serif;
+}
+
 header {
 	width: 100%;
 	height: 40px;
@@ -26,7 +30,6 @@ header {
 	font-size: 1.2em;
 	border-bottom: 1px dashed rgba(100, 100, 100, 1);
 	margin-bottom: 20px;
-	font-family: sans-serif;
 }
 
 .inputarea {
@@ -59,7 +62,6 @@ table {
 td {
   border: 1px solid black;
 	padding: 5px 10px;
-	font-family: sans-serif;
 }
 
 #input {
