--- a/rpe.css
+++ b/rpe.css
@@ -92,7 +92,11 @@ footer {
 	font-size: 16px;
 }
 
-#height, #weight, #age, #gender, #target, #period {
+#height, #weight, #age, #gender, #target, #period, #btn {
 	border-radius: 5px;
 	font-size: 16px;
+}
+
+.output-form {
+	font-size: 1.2em;
 }
